--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -7,7 +7,7 @@
     margin: 60px 350px 20px 350px;
     border-radius: 100px 0px;
     box-shadow:  5px 10px 10px #373432,
-                -5px -5px 10px #e8ebec;;;
+                -5px -5px 10px #e8ebec;
 }
 .email{
     text-decoration: none;
