--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -8,5 +8,18 @@
 }
 
 .project-images img:hover{
-    background-color: #373432;
+    color: rgb(107, 98, 98);
+    opacity: 0.5;
 }
+
+
+
+.project-images .img-view{
+    position: absolute;
+    visibility: hidden;
+}
+.project-images img:hover .img-view {
+    visibility: visible;
+    opacity: 1;
+    z-index: 2;
+  }
