--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -4,7 +4,7 @@
     width: 50%;
     box-shadow:  5px 10px 10px #373432,
                 -5px -5px 10px #e8ebec;
-
+    cursor: pointer;
 }
 
 .project-images img:hover{
