--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -42,8 +42,8 @@
     color: black;
 }
 .resume{
-    height: 30px;
-    width: 100px;
+    height: 40px;
+    width: 120px;
     padding: 2px;
     border-radius: 10px;
     border: none;
@@ -51,6 +51,7 @@
     box-shadow:  5px 10px 10px #373432,
                 -5px -5px 10px #e8ebec;
     margin-bottom: 10px;
+    font-family: Georgia;
 
 }
 
